텍스트 분석

--- a/06.텍스트분석/21.NewsGroup.ipynb
+++ b/06.텍스트분석/21.NewsGroup.ipynb
@@ -553,12 +553,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3,\n",
+       "             estimator=Pipeline(steps=[('tvect',\n",
+       "                                        TfidfVectorizer(stop_words='english')),\n",
+       "                                       ('lr', LogisticRegression())]),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid={'lr__C': [1, 10], 'tvect__max_df': [300, 700],\n",
+       "                         'tvect__ngram_range': [(1, 1), (1, 2)]},\n",
+       "             scoring='accuracy', verbose=1)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grid_pipe.fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lr__C': 10, 'tvect__max_df': 300, 'tvect__ngram_range': (1, 2)}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_pipe.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7010090281465746"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_pipe.best_estimator_.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
